--- a/src/main/resources/templates/invoice_view/new_invoice.html
+++ b/src/main/resources/templates/invoice_view/new_invoice.html
@@ -37,9 +37,9 @@
             </table>
         </div>
         <div>
-            <a href="javascript:history.back()" class="btn btn-primary">Go back</a>
+            <a href="javascript:history.back()" class="btn btn-primary">Quay lại</a>
 
-            <button type="submit" onclick="return validateForm();" class="btn btn-info col-2">Save</button>
+            <button type="submit" onclick="return validateForm();" class="btn btn-info col-2">Lưu hóa đơn</button>
         </div>
     </form>
 
