--- a/src/main/resources/templates/statistic_view/search_money_statistic.html
+++ b/src/main/resources/templates/statistic_view/search_money_statistic.html
@@ -26,13 +26,13 @@
         gian:
         <br>
         <div id="dateRangeDiv" style="display: none">
-            <label>From:</label>
+            <label>Từ:</label>
             <input type="date" name="fromDate" id="fromDate" required>
-            <label>To:</label>
+            <label>Đến:</label>
             <input type="date" name="toDate" id="toDate" required>
         </div>
         <br>
-        <button type="submit" class="btn btn-primary">Search</button>
+        <button type="submit" class="btn btn-primary">Tìm kiếm</button>
     </form>
 
     <script>
