--- a/src/main/resources/templates/invoice_view/create_success.html
+++ b/src/main/resources/templates/invoice_view/create_success.html
@@ -18,7 +18,7 @@
     <hr>
     <h2>Chi tiết hoá đơn</h2>
     <div>
-        <label>Invoice ID: </label>
+        <label>Mã hóa đơn: </label>
         <label>
                 <span type="text" th:text="*{id}" placeholder="Product Code"
                       class="form-control mb-4 col-4"/>
@@ -32,7 +32,7 @@
         </label>
     </div>
     <div align="left">
-        <label>Products: </label>
+        <label>Danh sách sản phẩm: </label>
         <table border="1" class="table table-striped table-responsive-md">
             <thead>
             <th>ID</th>
@@ -51,7 +51,7 @@
         </table>
     </div>
     <div>
-        <label>Total Amount: </label>
+        <label>Tổng tiền: </label>
         <label>
                 <span type="text" th:text="*{totalAmount}" placeholder="Type Product Code"
                       class="form-control mb-4 col-4"/>
