--- a/src/main/resources/templates/invoice_view/detail_invoice.html
+++ b/src/main/resources/templates/invoice_view/detail_invoice.html
@@ -26,21 +26,21 @@
   <hr>
   <h2>Chi tiết hoá đơn <td th:text="${invoice.id}"></td></h2>
   <div>
-    <label>Invoice ID: </label>
+    <label>Mã hóa đơn: </label>
     <label>
                 <span type="text" th:text="*{id}" placeholder="Type Product Code"
                       class="form-control mb-4 col-4"/>
     </label>
   </div>
   <div>
-    <label>Create Date: </label>
+    <label>Ngày tạo: </label>
     <label>
                 <span type="text" th:text="*{createDate}" placeholder="Type Product Code"
                       class="form-control mb-4 col-4"/>
     </label>
   </div>
   <div align="left">
-    <label>Products: </label>
+    <label>Danh sách sản phẩm: </label>
     <table border="1" class="table table-striped table-responsive-md">
       <thead>
       <th>ID</th>
@@ -59,14 +59,14 @@
     </table>
   </div>
   <div>
-    <label>Total Amount: </label>
+    <label>Tổng tiền: </label>
     <label>
                 <span type="text" th:text="*{totalAmount}" placeholder="Type Product Code"
                       class="form-control mb-4 col-4"/>
     </label>
   </div>
   <div>
-    <a href="javascript:history.back()" class="btn btn-primary">Go back</a>
+    <a href="javascript:history.back()" class="btn btn-primary">Quay lại</a>
   </div>
 </div>
 </body>
