--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -35,7 +35,7 @@
 			<div class = "col-md-6 col-md-offset-3">
 				
 				<h1> Đăng nhập </h1>
-				<form th:action="@{/}" method="post">
+				<form th:action="@{/login}" method="post">
 					
 					<!-- error message -->
 					<div th:if="${param.error}">
