--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -28,7 +28,7 @@
                     <a class="nav-link" href="/statistic">Thống kê</a>
                 </li>
                 <li class="nav-item" sec:authorize="isAuthenticated()">
-                    <a class="nav-link" th:href="@{/?logout}">Đăng xuất</a>
+                    <a class="nav-link" th:href="@{/login?logout}">Đăng xuất</a>
                 </li>
 
             </ul>
