--- a/src/main/resources/templates/employee_view/update_employees.html
+++ b/src/main/resources/templates/employee_view/update_employees.html
@@ -23,10 +23,10 @@
             <div>
                 <label>Tên nhân viên: </label>
                 <label>
-                    <input name="fname" type="text" th:field="*{firstName}" placeholder="Họ" class="form-control mb-4 col-4">
+                    <input name="fname" type="text" th:field="*{firstName}" placeholder="Họ" class="form-control mb-4 col-4" required>
                 </label>
                 <label>
-                    <input name="lname" type="lname" th:field="*{lastName}" placeholder="Tên" class="form-control mb-4 col-4">
+                    <input name="lname" type="lname" th:field="*{lastName}" placeholder="Tên" class="form-control mb-4 col-4" required>
                 </label>
             </div>
 
@@ -34,7 +34,7 @@
                 <label>Giới tính: </label>
                 <div th:each="option : ${T(group.g22.demostore.enums.GenderOption).values()}">
                     <div class="custom-control custom-radio custom-control-inline">
-                        <input name="gender" type="radio" th:field="*{genderOption}" th:value="${option}" class="custom-control-input">
+                        <input name="gender" type="radio" th:field="*{genderOption}" th:value="${option}" class="custom-control-input" required>
                         <label class="custom-control-label" th:for="${#ids.prev('genderOption')}"
                                th:text="${option}">option</label>
                     </div>
@@ -43,7 +43,7 @@
             <br>
             <div>
                 <label>Email:</label>
-                <input name="email" type="text" th:field="*{email}" placeholder="Email" class="form-control mb-4 col-4">
+                <input name="email" type="email" th:field="*{email}" placeholder="Email" class="form-control mb-4 col-4" required>
             </div>
 
             <div>
@@ -53,11 +53,11 @@
             <br>
             <div>
                 <label>Địa chỉ: </label>
-                <input name="address" type="text" th:field="*{address}" placeholder="Địa chỉ" class="form-control mb-4 col-4">
+                <input name="address" type="text" th:field="*{address}" placeholder="Địa chỉ" class="form-control mb-4 col-4" required>
             </div>
             <div>
                 <label>Căn cước công dân: </label>
-                <input name="identity" type="text" th:field="*{identityno}" placeholder="Số CCCD" class="form-control mb-4 col-4">
+                <input name="identity" type="number" th:field="*{identityno}" placeholder="Số CCCD" class="form-control mb-4 col-4" required>
             </div>
             <div class="form-group">
                 <label>Dân tộc:</label><br>
