--- a/src/main/resources/templates/invoice_view/new_invoice.html
+++ b/src/main/resources/templates/invoice_view/new_invoice.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Personnel Management System</title>
+    <title>Store Management System</title>
     <link th:href="@{css/main.css}" rel="stylesheet" type="text/css"/>
     <script type="text/javascript" th:src="@{js/main.js}"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -21,10 +21,10 @@
         <div>
             <table border="1" class="table table-striped table-responsive-md">
                 <thead>
-                <th>Product Id</th>
-                <th>Product Name</th>
-                <th>Selling Price</th>
-                <th>Quantity</th>
+                <th>Id</th>
+                <th>Tên</th>
+                <th>Giá bán</th>
+                <th>Số lượng</th>
                 </thead>
                 <tbody>
                 <tr th:each="product : ${listProduct}">
@@ -37,9 +37,9 @@
             </table>
         </div>
         <div>
-            <a href="javascript:history.back()" class="btn btn-primary">Go back</a>
+            <a href="javascript:history.back()" class="btn btn-primary">Quay lại</a>
 
-            <button type="submit" onclick="return validateForm();" class="btn btn-info col-2">Save</button>
+            <button type="submit" onclick="return validateForm();" class="btn btn-info col-2">Lưu hoá đơn</button>
         </div>
     </form>
 
@@ -49,15 +49,15 @@
             var sum = 0;
             var check = true;
             for (var i = 0; i < inputs.length; i++) {
-                if (parseInt(inputs[i].value) < 0) {
-                    check = false;
-                    break;
+                if (inputs[i].type === "number") {
+                    sum += parseInt(inputs[i].value);
                 } else {
+                    check = false;
                     sum += parseInt(inputs[i].value);
                 }
             }
             if (check == false) {
-                alert("hãy nhập số nguyên dương");
+                alert("hãy nhập đúng dạng số");
                 return false;
             } else {
                 if (sum > 0) {
