--- a/src/main/resources/templates/employee_view/update_employees.html
+++ b/src/main/resources/templates/employee_view/update_employees.html
@@ -26,7 +26,7 @@
                     <input name="fname" type="text" th:field="*{firstName}" placeholder="Họ" class="form-control mb-4 col-4" required>
                 </label>
                 <label>
-                    <input name="lname" type="lname" th:field="*{lastName}" placeholder="Tên" class="form-control mb-4 col-4" required>
+                    <input name="lname" type="text" th:field="*{lastName}" placeholder="Tên" class="form-control mb-4 col-4" required>
                 </label>
             </div>
 
