--- a/src/main/resources/templates/type_product_view/update.html
+++ b/src/main/resources/templates/type_product_view/update.html
@@ -24,7 +24,7 @@
             <label>Type Product Code: </label>
             <label>
                 <input type="text" th:field="*{typeProductCode}" placeholder="Type Product Code"
-                       class="form-control mb-4 col-4">
+                       class="form-control mb-4 col-4" required>
             </label>
         </div>
 
@@ -32,7 +32,7 @@
             <label>Type Product Name: </label>
             <label>
                 <input type="text" th:field="*{typeProductName}" placeholder="Type Product Name"
-                       class="form-control mb-4 col-4">
+                       class="form-control mb-4 col-4" required>
             </label>
         </div>
 
@@ -42,7 +42,7 @@
             <div th:each="option : ${T(group.g22.demostore.enums.TypeProductStatusOption).values()}">
                 <div class="custom-control custom-radio custom-control-inline">
                     <input type="radio" th:field="*{typeProductStatus}" th:value="${option.getValue()}"
-                           class="custom-control-input">
+                           class="custom-control-input" required>
                     <label class="custom-control-label" th:for="${#ids.prev('typeProductStatus')}"
                            th:text="${option.getName()}">option</label>
                 </div>
