--- a/src/main/resources/templates/invoice_view/invoices.html
+++ b/src/main/resources/templates/invoice_view/invoices.html
@@ -15,7 +15,7 @@
 <div th:insert="header.html"></div>
 <div class="container my-2">
 
-    <h1 align="center">Personnel List</h1>
+    <h1 align="center">Danh sách hóa đơn</h1>
     <table border="1" class="table table-striped table-responsive-md">
         <thead>
         <th><a th:href="@{'/invoice/page/' + ${currentPage} + '?sortField=id&sortDir=' + ${reverseSortDir}}">Mã hóa đơn
